--- a/index.html
+++ b/index.html
@@ -480,6 +480,12 @@ const SPECIAL_USERS = {
         cardGradient: 'linear-gradient(135deg, #6a1b9a, #9c27b0)',
         avatarAnimation: 'borderRotate'
     }
+	'gpsearch-ld': {
+		type: 'This service'
+		badgeClass: 'partner-badge'
+		cardGradient: 'linear-gradient(135deg, #008dff, #a151ff'
+		avatarAnimation: 'borderRotate'
+	}
 };
 
 function autoLink(text) {
