--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
         background: linear-gradient(45deg, #8b0000, #ff0000);
         color: white;
     }
+	
+	.service-badge {
+        background: linear-gradient(45deg, #008dff, #a151ff);
+        color: white;
+    }
 
     @keyframes badgePulse {
         0% { transform: scale(1); }
@@ -482,8 +487,8 @@ const SPECIAL_USERS = {
     }
 	'gpsearch-ld': {
 		type: 'This service'
-		badgeClass: 'partner-badge'
-		cardGradient: 'linear-gradient(135deg, #008dff, #a151ff'
+		badgeClass: 'service-badge'
+		cardGradient: 'linear-gradient(135deg, #008dff, #a151ff)'
 		avatarAnimation: 'borderRotate'
 	}
 };
