critical bug fixed

--- a/index.html
+++ b/index.html
@@ -484,11 +484,11 @@ const SPECIAL_USERS = {
         badgeClass: 'partner-badge',
         cardGradient: 'linear-gradient(135deg, #6a1b9a, #9c27b0)',
         avatarAnimation: 'borderRotate'
-    }
+    },
 	'gpsearch-ld': {
-		type: 'This service'
-		badgeClass: 'service-badge'
-		cardGradient: 'linear-gradient(135deg, #008dff, #a151ff)'
+		type: 'This service',
+		badgeClass: 'service-badge',
+		cardGradient: 'linear-gradient(135deg, #008dff, #a151ff)',
 		avatarAnimation: 'borderRotate'
 	}
 };
